Fixed multiple pannel collapsing function. Fixed border for item preview images. Fixed cart icon height.

--- a/css/common.scss
+++ b/css/common.scss
@@ -178,6 +178,8 @@ main{
           .cart{
             line-height: 2.5;
             display:inline-block;
+            position: relative;
+            top: -1px;
 
             a{
               display:block;
