--- a/css/itemInfo.scss
+++ b/css/itemInfo.scss
@@ -16,6 +16,7 @@
         display:inline-block;
         .item-image{
           display:inline-block;
+          border: solid 2px white;
           height: 100%;
           width: 100%;
           img{
